[gd_scene load_steps=4 format=3 uid="uid://bocwsai1yh1fj"]

[ext_resource type="Script" uid="uid://cpu57qxss27bp" path="res://components/apps/alpha_instant_messenger/aim_chat_message.gd" id="1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iow5l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iow5l"]
bg_color = Color(0.3549, 0.613947, 0.91, 0.894118)

[node name="AimChatMessage" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_iow5l")
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MessageBox" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftSpacer" type="Control" parent="MarginContainer/MessageBox"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/MessageBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_iow5l")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MessageBox/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MessageLabel" type="Label" parent="MarginContainer/MessageBox/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "test message"
autowrap_mode = 3

[node name="RightSpacer" type="Control" parent="MarginContainer/MessageBox"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
